# -Group-SAMIR-

./: .env  Dockerfile  README.md  Readme.md  docker-compose.yml
.github/workflows/: ci.yml
Backend/: README.md  requirement.txt
Backend/app/: main.py  model.py  rag_chain.py  utils.py
Backend/finetune/: clean.py  train.py
Backend/scripts/: init_vector_store.py
Frontend/: .env  README.md  index.html  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
Frontend/src/: App.tsx  index.css
MedAssistance/: index.html  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml
MedAssistance/src/: App.tsx  index.css
backend/: .env  Dockerfile  README.md  main.py  pyproject.toml  requirement.txt  requirements.txt
backend/app/: auth.py  feedback.py  main.py
backend/app/db/: database.py  models.py
backend/app/schemas/: feedback.py
backend/db/: database.py  models.py
backend/doctor_backend/: main.py
bloodwise-ai-main/backend/: clean_data.py  config.py  database.py  main.py  populate_inventory.py  requirements.txt  test_api.py
bloodwise-ai-main/bloodwise-ai-main/: README.md  index.html  netlify.toml  tailwind.config.ts
douala-healthech(trck 1,2,3)/: index.html  netlify.toml  tailwind.config.ts
douala-healthech(trck 1,2,3)/src/: index.css
fastapi_blood_bank/: main.py  requirements.txt
frontend/: index.html  package-lock.json
healthech/: netlify.toml
react_template/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
traefik/: dynamic_conf.yml  traefik.yml
(+122 files in other folders)
